java 17 support - velocity.